--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <nav class="nav">
           <h1 class="nav__logo">
             <a href="#"
-              ><img src="/styles/img/speed-logo.png" alt="logo-speed-project"
+              ><img
+                src="/styles/img/other/SPEED_logo_final_za web-08.png"
+                alt="logo-speed-project"
             /></a>
           </h1>
           <div class="nav__menu">
@@ -36,13 +38,11 @@
             </div>
             <ul class="nav__links active">
               <li><a href="#" class="nav__link">Home</a></li>
+              <li><a href="/about.html" class="nav__link">About Project</a></li>
               <li><a href="#offers" class="nav__link">Offers</a></li>
               <li><a href="#mentorship" class="nav__link">Mentorship</a></li>
               <li>
                 <a href="#testimonials" class="nav__link">Testimonials</a>
-              </li>
-              <li>
-                <a href="/about.html" class="nav__link">About Project</a>
               </li>
               <div class="nav__menu-close">
                 <i class="fas fa-times fa-2x"></i>
@@ -57,7 +57,7 @@
         <div class="container">
           <div class="showcase__box">
             <div class="showcase__inner-content">
-              <h2>Restart Your Career To Be More Successful</h2>
+              <h2>Join OUR Speed Project</h2>
               <button>
                 <a href="#offers" class="btn showcase__btn-cta">Get Started</a>
               </button>
@@ -68,42 +68,52 @@
       </section>
       <section class="offers" id="offers">
         <div class="container">
-          <h2>Offers</h2>
+          <h2 class="offers__heading h2--heading">Offers</h2>
           <div class="offers__box">
             <div class="offers__card">
               <i class="far fa-comment fa-3x"></i>
-              <h3>Mentoring</h3>
+              <h3>speed methodology</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo eos
-                illum deleniti ullam illo consequuntur aspernatur culpa quae.
-                Itaque vel in impedit! Dolore, consectetur dolores?
+                We are creating SPEED Methodology that will help setting up
+                School SPEED Businesses. <br />
+
+                Innovation of the Methodology is: working with established
+                business LocoSoco, using FairShares Principles and Social
+                Innovation Education.
               </p>
             </div>
             <div class="offers__card">
               <i class="fas fa-id-card-alt fa-3x"></i>
-              <h3>Successful Stories</h3>
+              <h3>speed academy</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo eos
-                illum deleniti ullam illo consequuntur aspernatur culpa quae.
-                Itaque vel in impedit! Dolore, consectetur dolores?
+                The SPEED Academy is a virtual Learning Platform integrated on
+                the FairShares Platform. <br />
+                The Academy is hosting courses concerning economy in general but
+                also specific FairShares economy, the Loco Soco and NEMESIS
+                community and school enterprises.
               </p>
             </div>
             <div class="offers__card">
               <i class="fas fa-briefcase fa-3x"></i>
-              <h3>For Compaines</h3>
+              <h3>LocoSoco</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo eos
-                illum deleniti ullam illo consequuntur aspernatur culpa quae.
-                Itaque vel in impedit! Dolore, consectetur dolores?
+                LocoSoco and SEi Ltd will set up an Eco Refill station as a
+                FairShares company
               </p>
             </div>
             <div class="offers__card">
               <i class="fas fa-building fa-3x"></i>
-              <h3>Start new Enterprise</h3>
+              <h3>speed tool box</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo eos
-                illum deleniti ullam illo consequuntur aspernatur culpa quae.
-                Itaque vel in impedit! Dolore, consectetur dolores?
+                Based on the already existing FairShares Planner and FairShares
+                Lab Platform the tools will be adapted to the needs of school
+                pupils that help start up FairShares companies, tools from the
+                NEMESIS project such as OPERA that help in co-creation decision
+                making and tools from LocoSoco including a number of Business in
+                the Boxes to help schools start their own business. The result
+                will be an accessible SPEED tool box essential to effective
+                replication and scaling up of the project after the funding
+                ends.
               </p>
             </div>
           </div>
@@ -111,23 +121,23 @@
       </section>
       <section class="mentorship" id="mentorship">
         <div class="container">
-          <h2>Mentorship</h2>
+          <h2 class="mentorship__heading h2--heading">Mentorship</h2>
           <div class="mentorship__box">
             <div class="mentorship__person">
               <img src="https://randomuser.me/api/portraits/women/2.jpg" />
             </div>
             <div class="mentorship__info">
               <div class="mentorship__text">
-                <h3>Jane Doe</h3>
-                <h4>School Mentor</h4>
+                <h3>James Perry</h3>
+                <h4>Loco Soco</h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Repudiandae dolores, excepturi reiciendis harum libero
-                  voluptatibus. Dolorem eligendi omnis accusamus. Explicabo, id
-                  nihil corporis natus quam officiis qui repellat asperiores nam
-                  consequuntur repellendus provident rerum ut corrupti ipsa
-                  suscipit illum, placeat cumque necessitatibus! Tempore
-                  incidunt quae consequuntur pariatur molestias sed doloremque.
+                  LocoSoco Group Plc is a publicly traded entity set up to bring
+                  challenger brands and concepts to market in a way that rewards
+                  participation with revenue and equity. LocoSoco are skilled in
+                  areas of marketing, technology development, IP creation and
+                  community engagement. They also invest heavily in useful
+                  technology tools to help engage, inspire and teach at scale
+                  using a variety of interactive online tools.
                 </p>
               </div>
               <div class="mentorship__stats">
@@ -150,12 +160,13 @@
       </section>
       <section class="testimonials" id="testimonials">
         <div class="container">
-          <h2>Testimonials</h2>
+          <h2 class="testimonials__heading h2--heading">
+            Schools who joined SPEED
+          </h2>
           <div class="testimonials__box">
             <figure class="testimonials__item">
               <img src="/styles/img/school-1.png" alt="testimonials" />
               <div class="testimonials__inner-item">
-                testimonials
                 <figcaption>
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Similique, minima corporis nulla eaque asperiores veritatis
@@ -234,6 +245,43 @@
           </div>
         </div>
       </section>
+      <section class="partnership">
+        <div class="container">
+          <h2 class="partnership__heading h2--heading">partnership</h2>
+          <div class="partnership__box">
+            <div class="partnership__partner">
+              <img
+                src="/styles/img/other/1613557568411.jpg"
+                alt="Stimmuli for Social Change, Greece"
+              />
+            </div>
+            <div class="partnership__partner">
+              <img
+                src="/styles/img/other/SLAP-LOGO-FINAL-Color.png"
+                alt="Association for Creative Development Slap, Croatia"
+              />
+            </div>
+            <div class="partnership__partner">
+              <img
+                src="/styles/img/other/VSIB_logo_farbe-01.png"
+                alt="Verein zur sozialen und beruflichen Integration e.V. Germany"
+              />
+            </div>
+            <div class="partnership__partner">
+              <img
+                src="/styles/img/other/kopf logo.png"
+                alt="KOPF, HAND und FUSS gemeinnützige Gesellschaft für Bildung mbH, Germany"
+              />
+            </div>
+            <div class="partnership__partner">
+              <img
+                src="/styles/img/other/EskdaleLogo.png"
+                alt="Eskdale School, United Kingdom"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
@@ -263,19 +311,11 @@
           </div>
           <div class="footer__col">
             <h2>
-              <img src="styles/img/stimmuli.png" alt="stimmuli" />
-            </h2>
-            <p>
-              Creative Commons License This work is licensed under a Creative
-              Commons Attribution-NonCommercial -ShareAlike 4.0 International
-              License. Creative Commons License This work is licensed under a
-              Creative Commons Attribution-NonCommercial -ShareAlike 4.0
-              International License.
-            </p>
-          </div>
-          <div class="footer__col">
-            <h2>
-              <img src="/styles/img/slap.png" alt="slap" />
+              <img
+                src="/styles/img/slap.png"
+                alt="slap"
+                class="slap-logo-footer"
+              />
             </h2>
             <p>
               The sole responsibility for the content of this web page lies with
