--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <h2 class="mentorship__heading h2--heading">Mentorship</h2>
           <div class="mentorship__box">
             <div class="mentorship__person">
-              <img src="https://randomuser.me/api/portraits/women/2.jpg" />
+              <img src="/styles/img/james.jpg" />
             </div>
             <div class="mentorship__info">
               <div class="mentorship__text">
@@ -301,7 +301,11 @@
           </div>
           <div class="footer__col">
             <h2>
-              <img src="styles/img/eu.png" alt="eu" />
+              <img
+                class="creative-commons"
+                src="/styles/img/other/creative-commons.jpg"
+                alt="eu"
+              />
             </h2>
             <p>
               Creative Commons License This work is licensed under a Creative
