--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
           <h1 class="nav__logo">
             <a href="#"
               ><img
-                src="/styles/img/other/SPEED_logo_final_za web-08.png"
+                src="/styles/img/other/SPEED_logo_white.png"
                 alt="logo-speed-project"
+                class="speed-logo"
             /></a>
           </h1>
           <div class="nav__menu">
@@ -322,8 +323,8 @@
               />
             </h2>
             <p>
-              The sole responsibility for the content of this web page lies with
-              the authors.
+              Association for Creative Development
+              <span class="slap-footer">Slap</span>
             </p>
           </div>
         </div>
@@ -332,7 +333,9 @@
         <i class="fas fa-chevron-up fa-2x"></i>
       </a>
       <section class="footer__copyright">
-        <h2>Copyright &copy; 2021 - Created by Modra Nit</h2>
+        <h2>
+          Copyright &copy; 2022 - Association for Creative Development Slap
+        </h2>
       </section>
     </footer>
     <script src="app.js"></script>
