--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <nav class="nav">
           <h1 class="nav__logo">
             <a href="index.html"
-              ><img src="/styles/img/speed-logo.png" alt="logo-speed-project"
+              ><img src="/styles/img/other/SPEED_logo_white.png" alt="logo-speed-project" class="speed-logo"
             /></a>
           </h1>
           <div class="nav__menu">
@@ -165,7 +165,11 @@
           </div>
           <div class="footer__col">
             <h2>
-              <img src="styles/img/eu.png" alt="eu" />
+              <img
+                class="creative-commons"
+                src="/styles/img/other/creative-commons.jpg"
+                alt="eu"
+              />
             </h2>
             <p>
               Creative Commons License This work is licensed under a Creative
@@ -175,23 +179,14 @@
           </div>
           <div class="footer__col">
             <h2>
-              <img src="styles/img/stimmuli.png" alt="stimmuli" />
+              <img
+                src="/styles/img/slap.png"
+                alt="slap"
+                class="slap-logo-footer"
+              />
             </h2>
             <p>
-              Creative Commons License This work is licensed under a Creative
-              Commons Attribution-NonCommercial -ShareAlike 4.0 International
-              License. Creative Commons License This work is licensed under a
-              Creative Commons Attribution-NonCommercial -ShareAlike 4.0
-              International License.
-            </p>
-          </div>
-          <div class="footer__col">
-            <h2>
-              <img src="/styles/img/slap.png" alt="slap" />
-            </h2>
-            <p>
-              The sole responsibility for the content of this web page lies with
-              the authors.
+              Association for Creative Development <span class="slap-footer">Slap</span> 
             </p>
           </div>
         </div>
@@ -200,7 +195,7 @@
         <i class="fas fa-chevron-up fa-2x"></i>
       </a>
       <section class="footer__copyright">
-        <h2>Copyright &copy; 2021 - Created by Modra Nit</h2>
+        <h2>Copyright &copy; 2022 - Association for Creative Development Slap</h2>
       </section>
     </footer>
     <script src="app.js"></script>
